syntax = "proto3";

package proto;

option go_package = "./proto";


message User {
    string id = 1;
    string name = 2;
    string email = 3;
}

message CreateUserRequest{
    User user = 1;
}

message CreateUserResponse{
    User user = 1;
}

message GetUserRequest {
}

message GetUserResponse {
   repeated User user = 1;
}

message UpdateUserRequest {
    User user = 1;
}

message UpdateUserResponse {
    User user = 1;
}

message DeleteUserRequest {
    string id = 1;
}

message DeleteUserResponse{
    bool success = 1;
}

service UserService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}